updated project. tables are uploaded into cloudflare d1

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-
 # Bootstrap marker
 .bootstrap-complete
+
+# Cloudflare
+.wrangler/
+
+# Node
+node_modules/
+package-lock.json
+dist/
+
+# Bun
+bun.lock
+
+# MacOS
+.DS_Store
